# duplo

./: .env  README.md  pyproject.toml  shell.nix
.github/: copilot-instructions.md
app/: __init__.py  main.py
core/: __init__.py  config.py  train_controller.py
duplo/: __init__.py  api.py  decoder.py  main.py  test_decoder.py  train.py
duplo/cli/: __init__.py  broadcast.py  demo.py  listen_toothbrush.py  toothbrush.py
examples/: library_usage_demo.py
protocols/: __init__.py  ble_duplo_train.py  ble_toothbrush.py
scripts/: control_train_with_toothbrush.py  listen_to_broadcast.py  listen_to_toothbrush_events.py  make_train_make_sound.py
services/: __init__.py  ble.py  ble_manager.py
tests/: test_ble_manager.py  test_ble_service.py  test_ble_toothbrush.py  test_cli.py  test_duplo_api.py  test_train_controller.py
