[project]
name = "duplo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.22.3",
    "ipython>=8.31.0",
    "pydantic-extra-types>=2.10.1",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
]
[dependency-groups]
dev = [
    "construct>=2.10.68",
    "construct-typing>=0.6.2",
    "mypy>=1.14.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "pytest-mypy>=0.10.3",
    "pytest-watcher>=0.4.3",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
[tool.mypy]
plugins = ['pydantic.mypy']
[tool.pytest.ini_options]
asyncio_mode = "auto"
