[project]
name = "duplo"
version = "0.1.0"
description = "BLE control for DUPLO trains with toothbrush integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.22.3",
    "ipython>=8.31.0",
    "pydantic-extra-types>=2.10.1",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
]

[project.scripts]
duplo-demo = "duplo.cli.demo:main"
duplo-toothbrush = "duplo.cli.toothbrush:main"
duplo-listen-toothbrush = "duplo.cli.listen_toothbrush:main"
duplo-listen-broadcast = "duplo.cli.broadcast:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "protocols*", "services*", "app*", "duplo*"]
[dependency-groups]
dev = [
    "construct>=2.10.68",
    "construct-typing>=0.6.2",
    "mypy>=1.14.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "pytest-mypy>=0.10.3",
    "pytest-watcher>=0.4.3",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
[tool.mypy]
plugins = ['pydantic.mypy']
[tool.pytest.ini_options]
asyncio_mode = "auto"
